--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "samleatherdale.github.io",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "description": "Sam Leatherdale's web portfolio.",
+  "version": "1.0.0",
+  "author": "Sam Leatherdale",
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "bootstrap-css-only": "^4.3.1",
     "gatsby": "^2.15.22",
     "gatsby-image": "^2.2.21",
     "gatsby-plugin-manifest": "^2.2.18",
@@ -28,9 +30,6 @@
     "gh-pages": "^2.1.1",
     "prettier": "^1.18.2"
   },
-  "keywords": [
-    "gatsby"
-  ],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -44,9 +43,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/SamLeatherdale/samleatherdale.github.io"
   }
 }
