--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -4,41 +4,41 @@
     "location": "sydneytrainscarlookup",
     "icon": "sydneytrains.png",
     "description": "Search a Sydney Trains carriage number to find out the model and carriage type.",
-    "isMobile": false
+    "isDesktopOnly": false
   },
   {
     "title": "Ultra Motherload",
     "location": "ultramotherload",
     "icon": "ultramotherload.png",
     "description": "View and modify Super Motherload map files in a simple JavaScript editor.",
-    "isMobile": true
+    "isDesktopOnly": true
   },
   {
     "title": "YouTube Timeline",
     "location": "youtubetimeline",
     "icon": "youtubetimeline.png",
     "description": "See the entire history of any YouTube channel without scrolling forever.",
-    "isMobile": false
+    "isDesktopOnly": false
   },
   {
     "title": "Discord Text Generator",
     "location": "discordtextgenerator",
     "icon": "discordtextgenerator.png",
     "description": "Convert text to Discord's Regional Text Indicator characters, and split large messages.",
-    "isMobile": false
+    "isDesktopOnly": false
   },
   {
     "title": "Erppy Mobile",
     "location": "erppymobile",
     "icon": "erppymobile.png",
     "description": "A mobile friendly adaptation of Barry Martin's Hopalong Orbits Visualizer.",
-    "isMobile": false
+    "isDesktopOnly": false
   },
   {
     "title": "Grid Game",
     "location": "gridgamejs",
     "icon": "gridgame.png",
     "description": "A simple game where the objective is to find a randomly selected tile within a grid.",
-    "isMobile": true
+    "isDesktopOnly": true
   }
 ]
