--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -3,30 +3,35 @@
     "title": "Deus Ex Hacking Game",
     "repo": "deusex-hackgame",
     "liveUrl": "https://deusex.netlify.com",
+    "icon": "deusex.png",
     "description": "A version of the Deus Ex hacking minigame, in React/TypeScript.",
     "isDesktopOnly": true,
-    "isBeta": true
+    "status": "beta",
+    "libraries": ["react", "ts"]
   },
   {
     "title": "Sydney Trains Car Lookup",
     "repo": "sydneytrainscarlookup",
     "icon": "sydneytrains.png",
     "description": "Search a Sydney Trains carriage number to find out the model and carriage type.",
-    "isDesktopOnly": false
+    "isDesktopOnly": false,
+    "libraries": ["react", "ts"]
   },
   {
     "title": "Ultra Motherload",
     "repo": "ultramotherload",
     "icon": "ultramotherload.png",
     "description": "View and modify Super Motherload map files in a simple JavaScript editor.",
-    "isDesktopOnly": true
+    "isDesktopOnly": true,
+    "libraries": ["canvas"]
   },
   {
     "title": "YouTube Timeline",
     "repo": "youtubetimeline",
     "icon": "youtubetimeline.png",
     "description": "See the entire history of any YouTube channel without scrolling forever.",
-    "isDesktopOnly": false
+    "isDesktopOnly": false,
+    "libraries": ["api"]
   },
   {
     "title": "Discord Text Generator",
@@ -40,13 +45,15 @@
     "repo": "erppymobile",
     "icon": "erppymobile.png",
     "description": "A mobile friendly fork of Barry Martin's Hopalong Orbits Visualizer.",
-    "isDesktopOnly": false
+    "isDesktopOnly": false,
+    "libraries": ["forked"]
   },
   {
     "title": "Grid Game",
     "repo": "gridgamejs",
     "icon": "gridgame.png",
     "description": "A simple game where the objective is to find a randomly selected tile within a grid.",
-    "isDesktopOnly": true
+    "isDesktopOnly": true,
+    "libraries": ["canvas"]
   }
 ]
