--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -10,6 +10,16 @@
     "libraries": ["react", "ts"]
   },
   {
+    "title": "Nova Launcher Editor",
+    "repo": "novalaunchereditor",
+    "liveUrl": "https://novaeditor.netlify.com",
+    "icon": "novaeditor.png",
+    "description": "A React app to edit backup files from the Android home screen app Nova Launcher.",
+    "isDesktopOnly": true,
+    "libraries": ["react", "ts"],
+    "status": "alpha"
+  },
+  {
     "title": "Sydney Trains Car Lookup",
     "repo": "sydneytrainscarlookup",
     "icon": "sydneytrains.png",
@@ -60,6 +70,7 @@
     "title": "Gatsby Portfolio",
     "repo": "samleatherdale.github.io/tree/gatsby",
     "description": "The source code of this website.",
-    "liveUrl": ""
+    "liveUrl": "",
+    "libraries": ["react", "ts"]
   }
 ]
