WIP: Add blog page and posts

--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "gatsby-plugin-offline": "^3.0.8",
     "gatsby-plugin-react-helmet": "^3.1.8",
     "gatsby-plugin-sass": "^2.1.15",
-    "gatsby-plugin-sharp": "^2.2.25",
+    "gatsby-plugin-sharp": "^2.3.4",
     "gatsby-plugin-typescript": "^2.1.9",
+    "gatsby-remark-images": "^3.1.34",
     "gatsby-source-filesystem": "^2.1.26",
     "gatsby-transformer-json": "^2.2.9",
-    "gatsby-transformer-remark": "^2.6.24",
+    "gatsby-transformer-remark": "^2.6.38",
     "gatsby-transformer-sharp": "^2.2.17",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
