--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby": "^2.15.22",
     "gatsby-image": "^2.2.21",
     "gatsby-plugin-manifest": "^2.2.18",
+    "gatsby-plugin-mdx": "^1.0.58",
     "gatsby-plugin-offline": "^3.0.8",
     "gatsby-plugin-react-helmet": "^3.1.8",
     "gatsby-plugin-sass": "^2.1.15",
