--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -1,5 +1,5 @@
 {
-  "name": "Untitled GraphQL Schema",
+  "name": "Gatsby GraphQL Schema",
   "schemaPath": "schema.graphql",
   "extensions": {
     "endpoints": {
