--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "version": "1.0.0",
   "author": "Sam Leatherdale",
   "dependencies": {
+    "@mdx-js/mdx": "^1.5.1",
+    "@mdx-js/react": "^1.5.1",
+    "@types/react-slick": "^0.23.4",
     "bootstrap": "^4.3.1",
     "bootstrap-css-only": "^4.3.1",
     "gatsby": "^2.15.22",
@@ -26,6 +29,8 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
+    "react-slick": "^0.25.2",
+    "slick-carousel": "^1.8.1",
     "typescript": "^3.6.3"
   },
   "devDependencies": {
