--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-css-only": "^4.3.1",
     "gatsby": "^2.23.3",
     "gatsby-image": "^2.2.21",
+    "gatsby-plugin-google-analytics": "^2.3.5",
     "gatsby-plugin-manifest": "^2.2.18",
     "gatsby-plugin-mdx": "^1.0.58",
     "gatsby-plugin-offline": "^3.0.8",
