--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.5.1",
     "@mdx-js/react": "^1.5.1",
+    "@types/lodash": "^4.14.156",
     "@types/react-slick": "^0.23.4",
+    "@types/styled-components": "^5.1.0",
     "bootstrap": "^4.3.1",
     "bootstrap-css-only": "^4.3.1",
     "gatsby": "^2.23.3",
@@ -24,14 +26,18 @@
     "gatsby-source-filesystem": "^2.1.26",
     "gatsby-transformer-remark": "^2.6.38",
     "gatsby-transformer-sharp": "^2.2.17",
+    "is-absolute-url": "^3.0.3",
+    "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
+    "polished": "^3.6.5",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.10.0",
     "react-slick": "^0.25.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "eslint": "^7.2.0",
