--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "@types/react-slick": "^0.23.4",
     "@types/styled-components": "^5.1.0",
     "bootstrap": "^4.3.1",
-    "bootstrap-css-only": "^4.3.1",
-    "gatsby": "^2.23.3",
+    "gatsby": "^2.23.11",
     "gatsby-image": "^2.2.21",
     "gatsby-plugin-google-analytics": "^2.3.5",
     "gatsby-plugin-manifest": "^2.2.18",
@@ -21,7 +20,7 @@
     "gatsby-plugin-react-helmet": "^3.1.8",
     "gatsby-plugin-sass": "^2.1.15",
     "gatsby-plugin-sharp": "^2.3.4",
-    "gatsby-plugin-typescript": "^2.1.9",
+    "gatsby-plugin-typescript": "^2.4.8",
     "gatsby-remark-images": "^3.1.34",
     "gatsby-source-filesystem": "^2.1.26",
     "gatsby-transformer-remark": "^2.6.38",
@@ -31,8 +30,8 @@
     "node-sass": "^4.12.0",
     "polished": "^3.6.5",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.10.0",
     "react-slick": "^0.25.2",
@@ -40,21 +39,23 @@
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "eslint": "^7.2.0",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
+    "eslint": "^7.3.1",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
-    "gh-pages": "^2.2.0",
-    "typescript": "^3.6.3"
+    "gh-pages": "^3.1.0",
+    "typescript": "^3.9.5"
   },
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "eslint --fix",
+    "lint": "eslint --ext .js,.ts,.tsx src/",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "type-check": "tsc --noEmit",
+    "typecheck": "tsc --noEmit",
     "deploy": "gatsby build && gh-pages -d public -b master"
   },
   "repository": {
