--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/lodash": "^4.14.156",
     "@types/react-slick": "^0.23.4",
     "@types/styled-components": "^5.1.0",
+    "babel-plugin-styled-components": "^1.10.7",
     "bootstrap": "^4.3.1",
     "gatsby": "^2.23.11",
     "gatsby-image": "^2.2.21",
@@ -20,6 +21,7 @@
     "gatsby-plugin-react-helmet": "^3.1.8",
     "gatsby-plugin-sass": "^2.1.15",
     "gatsby-plugin-sharp": "^2.3.4",
+    "gatsby-plugin-styled-components": "^3.3.6",
     "gatsby-plugin-typescript": "^2.4.8",
     "gatsby-remark-images": "^3.1.34",
     "gatsby-source-filesystem": "^2.1.26",
